# project_template

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  test.py  train.py
configs/: default.yaml
lib/config/: __init__.py  configs.py  yacs.py
lib/utils/: base_utils.py  cfg_utils.py  console_utils.py  data_utils.py  image_utils.py  parallel_utils.py  video_utils.py
scripts/evc/: evc2gsplat.sh  evc_to_colmap_full.py  evc_to_colmap_modified.py
scripts/vsr4d/: generate_data_lod.py  img2video.py  make_overview_img.py  run_data_lod_pipeline.sh
