[project]
name = "project_name"
version = "0.1.0"
description = "description for you project"
authors = [{ name = "cxzhou35", email = "cxzhou35@zju.edu.cn" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
[project.urls]
homepage = "https://github.com/cxzhou35/project_page"

[tool.pyright]
exclude = ["**/node_modules", "**/__pycache__", "data"]

reportMissingImports = "warning"
reportMissingTypeStubs = false
reportPrivateImportUsage = false

[tool.isort]
profile = "hug"
skip = [".gitignore"]
length_sort = true
lines_between_sections = 0
lines_after_imports = 1
